# FEUP-AED

./: CMakeLists.txt  README.md
2023_2024/: README.md
2023_2024/Exam/aed2324_ci1_v1/: main.cpp
2023_2024/Teste 2/: Graph(1).cpp  graph.cpp
2023_2024/Tests/: funWithSearch.cpp
2023_2024/aed2223_ci1 (1)/Tests/: consultation.cpp  consultation.h  doctor.cpp  doctor.h  hospital.cpp  hospital.h  patient.cpp  patient.h
2023_2024/aed2223_ci1/Tests/: doctor.cpp  doctor.h  hospital.cpp  hospital.h  patient.cpp  patient.h
2023_2024/aed2223_ci1_161122/: CMakeLists.txt
2023_2024/aed2223_ci1_161122/__MACOSX/aed2223_ci1_161122/lib/googletest-master/googlemock/src/: ._gmock-cardinalities.cc
2023_2024/aed2223_ci1_161122/aed2223_ci1_161122/Tests/: Driver.cpp
2023_2024/aed2324_p02/Tests/: funWithComplexity.cpp
2023_2024/aed2324_p03/Tests/: funListStackQueueProblem.cpp  game.cpp
2023_2024/aed2324_p05/Tests/: dictionary.cpp
2023_2024/aed2324_p06/Tests/: funSortProblem.h
2023_2024/aed2324_p07/Tests/: box.cpp  packagingMachine.cpp
2023_2024/aed2324_p09/Tests/: Graph.h
2023_2024/aed2324_p10/Tests/: Graph.h  Vertex.h  funWithBFS.cpp  funWithBFS.h
2023_2024/aed2324_p12/Tests/: Graph.h  funWithGraphs.cpp
2024_2025/: FUNC.cpp  Primes.cpp  find_last_negative_odd_and_count.cpp  remove  remove.cpp
2024_2025/Pratica1/: AED000  AED000.cpp  AED001  AED001.cpp  AED002  AED002.cpp  AED003  AED003.cpp  FUNC  FUNC.cpp  Primes  Primes.cpp  find_last_negative_odd_and_count  find_last_negative_odd_and_count.cpp
2024_2025/Pratica10/: AED058  AED058.cpp  AED059  AED059.cpp  AED060  AED060.cpp  AED061  AED061.cpp  AED062  AED062.cpp  AED063  AED063.cpp  AED064  AED064.cpp  AED066  AED066.cpp  graph.h
2024_2025/Pratica11/: AED067  AED067.cpp  AED068  AED068.cpp  AED069  AED069.cpp  AED070  AED070.cpp  AED071  AED071.cpp  hashTableOA.h  hashTableSC.h
2024_2025/Pratica12/: AED072  AED072.cpp  AED073  AED073.cpp  AED074  AED074.cpp  AED075  AED075.cpp  AED076  AED076.cpp  maxHeap.h  testHeap  testHeap.cpp
2024_2025/Pratica2/: NumberSpiral  NumberSpiral.cpp  NumberSpiral2.cpp  SavingPipefish  SavingPipefish.cpp  aed0001.cpp  contar42  contar42.cpp  prime  prime.cpp  sequencegame  sequencegame.cpp
2024_2025/Pratica3/: BackPacking_Trip  Backpacking_Trip.cpp  Closest_Sums  Closest_Sums.cpp  Cool_Numbers  Cool_Numbers.cpp  Interval_Count  Interval_Count.cpp  Lower_Bound  Lower_Bound.cpp  Number_Searching  Number_Searching.cpp  Word_Game  Word_Game.cpp
2024_2025/Pratica3/class03_ex1/: class03_ex1  class03_ex1.cpp
2024_2025/Pratica4/: AED012  AED012.cpp  AED013  AED013.cpp  AED015  AED015.cpp  AED016  AED016.cpp  Anagrams  Anagrams.cpp  ChocolateBoxes  ChocolateBoxes.cpp  Computer_Lab.cpp  Computer_lab  CountingInversions  CountingInversions.cpp  Counting_the_Bits  Counting_the_Bits.cpp  FerrisWheel  FerrisWheel.cpp  FootballTable  FootballTable.cpp  GameTournament  GameTournament.cpp  custom_sort_example  custom_sort_example.cpp  lambda_sort_example  lambda_sort_example.cpp  sortPhrase.cpp  sortPrase  sort_example  sort_example.cpp
2024_2025/Pratica5/: AED020  AED020.cpp  AED021  AED021.cpp  AED022  AED022.cpp  AED023  AED023.cpp  AED024  AED024.cpp  AED025  AED025.cpp  singlyLinkedList.h  testLists  testLists.cpp
2024_2025/Pratica6/: AED026  AED026.cpp  AED027  AED027.cpp  AED028  AED028.cpp  AED029  AED029.cpp  AED030  AED030.cpp  AED031.cpp  lists_example  lists_example.cpp  queues_example  queues_example.cpp  skeletonGrahamScan.cpp  stacks_example  stacks_example.cpp  types_example  types_example.cpp
2024_2025/Pratica7/: AED039  AED039.cpp  binaryTree.h  input.txt  input2.txt  test  test.cpp  test1  test1.cpp  test2  test2.cpp  test3  test3.cpp  test4  test4.cpp  test5  test5.cpp  test6  test6.cpp  testBTrees  testBTrees.cpp
2024_2025/Pratica8/: AED040  AED040.cpp  AED041  AED041.cpp  AED042  AED042.cpp  AED043  AED043.cpp  AED044  AED044.cpp  AED045.cpp  AED046  AED046.cpp  AED047  AED047.cpp  AED048  AED048.cpp  binarySearchTree.h  map_example  map_example.cpp  set_example  set_example.cpp
2024_2025/Pratica9/: AED049  AED049.cpp  AED050  AED050.cpp  AED051  AED051.cpp  AED052  AED052.cpp  AED053  AED053.cpp  AED054  AED054.cpp  AED055  AED055.cpp  AED056  AED056.cpp  AED057  AED057.cpp  graph.h  input_graph.txt  testGraphs  testGraphs.cpp
2024_2025/Teste1/: Test1_prática_2324.cpp  Teste1  Teste1-PartePraticaEnunciado-2022-Versao1.cpp  Teste1-PartePraticaEnunciado-2022-Versao2.cpp  Teste1.cpp  Teste1_1  Teste1_1.cpp
2024_2025/Teste2/Test2-Pratica2023/: Graph.h  GraphOps.cpp  GraphOps.h  Problem1.cpp  Problem2.cpp  Problem3.cpp  Problem5.cpp  Problem6.cpp  problem4.cpp
2024_2025/Teste2/Teste2-Pratico2022/: Problem1.cpp  Problem2.cpp  Problem3.cpp  Problem4.cpp  Problem5.cpp  Problem7.cpp  funWithGraphs.cpp  graph.cpp  problem6.cpp
2024_2025/Teste3/: AED000.cpp  AED001.cpp  AED0012.cpp  AED002.cpp  AED003.cpp  AED013.cpp  AED015.cpp  AED016.cpp  binaryTree.h  graph.h
Exam/CI2_practica_v1_dist/CI2_practica_dist/: CMakeLists.txt
Exam/CI2_practica_v1_dist/CI2_practica_dist/Tests/: tests.cpp
Exam/aed2324_ci1_v1/: CMakeLists.txt
Exam/aed2324_ci1_v1/Tests/: agent.h  callCenter.h  order.cpp  order.h  tests.cpp
Exam/aed2324_ci1_v1/lib/googletest/googletest/include/gtest/internal/: gtest-port.h
Teste 2/: CMakeLists.txt  graph  graph.h
Tests/: funWithCycles.cpp
aed2223_ci1 (1)/Tests/: doctor.cpp  doctor.h  hospital.cpp  hospital.h  patient.cpp  patient.h
aed2223_ci1/Tests/: doctor.cpp  doctor.h  hospital.cpp  patient.cpp  patient.h
aed2223_ci1_161122/aed2223_ci1_161122/Tests/: Restaurant.cpp  UverEats.cpp
aed2324_p02/: CMakeLists.txt
aed2324_p02/Tests/: funWithComplexity.h  tests.cpp
aed2324_p03/Tests/: funListStackQueueProblem.cpp  funListStackQueueProblem.h  game.h  stackExt.h
aed2324_p05/Tests/: funSetProblem.cpp
aed2324_p06/Tests/: funSortProblem.cpp  funWithSearch.cpp
aed2324_p09/Tests/: Graph.h  funWithGraphs.cpp  funWithGraphs.h
aed2324_p10/Tests/: Graph.h  funWithDFS.cpp
aed2324_p12/Tests/: funWithGraphs.cpp  funWithGraphs.h
(+10 files in other folders)
